--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
